--- a/app/src/main/res/layout/game_first_exr.xml
+++ b/app/src/main/res/layout/game_first_exr.xml
@@ -106,6 +106,7 @@
                         android:textColor="@color/colorPrimary"
                         android:textSize="18sp"
                         android:textStyle="bold"
+                        android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.785"
