--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -1,48 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/game"
-    tools:context=".GameActivity">
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <RelativeLayout
-        android:id="@+id/relative_lay_game"
-        android:layout_width="419dp"
-        android:layout_height="735dp"
-        android:background="@drawable/animation_background"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+    <android.support.constraint.ConstraintLayout tools:context=".GameActivity"
+    android:text="@string/game" android:layout_height="match_parent"
+    android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="733dp">
 
-            <Button
-                android:id="@+id/start_game"
-                android:layout_width="329dp"
-                android:layout_height="69dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="56dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/splash_btn_grad"
-                android:fontFamily="cursive"
-                android:onClick="onClick"
-                android:text="Почати"
-                android:textSize="24sp"
-                android:textStyle="italic"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.964" />
-        </android.support.constraint.ConstraintLayout>
-    </RelativeLayout>
+    -<RelativeLayout android:layout_height="735dp"
+    android:layout_width="419dp"
+    app:layout_constraintVertical_bias="1.0"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:visibility="visible"
+    android:background="@drawable/animation_background"
+    android:id="@+id/relative_lay_game">
+
+
+    -<android.support.constraint.ConstraintLayout android:layout_height="733dp" android:layout_width="match_parent">
+
+    <Button android:text="Почати" android:layout_height="69dp" android:layout_width="329dp" app:layout_constraintVertical_bias="0.964" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/splash_btn_grad" android:id="@+id/start_game" android:textStyle="italic" android:textSize="24sp" android:onClick="onClick" android:fontFamily="cursive" android:layout_marginBottom="8dp" android:layout_marginEnd="56dp" android:layout_marginTop="8dp" android:layout_marginStart="56dp"/>
+
+</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
