--- a/app/src/main/res/layout/game_first_exr.xml
+++ b/app/src/main/res/layout/game_first_exr.xml
@@ -94,7 +94,7 @@
                         app:layout_constraintVertical_bias="0.14" />
 
                     <TextView
-                        android:id="@+id/text_scores"
+                        android:id="@+id/text_score"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
