--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -6,25 +6,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    -<RelativeLayout android:layout_height="735dp"
-    android:layout_width="419dp"
-    app:layout_constraintVertical_bias="1.0"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:visibility="visible"
-    android:background="@drawable/animation_background"
-    android:id="@+id/relative_lay_game">
+    -
+
+        <RelativeLayout
+            android:id="@+id/relative_lay_game"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/animation_background"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0">
 
 
-    -<android.support.constraint.ConstraintLayout android:layout_height="733dp" android:layout_width="match_parent">
+            -
 
-    <Button android:text="Почати" android:layout_height="69dp" android:layout_width="329dp" app:layout_constraintVertical_bias="0.964" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/splash_btn_grad" android:id="@+id/start_game" android:textStyle="italic" android:textSize="24sp" android:onClick="onClick" android:fontFamily="cursive" android:layout_marginBottom="8dp" android:layout_marginEnd="56dp" android:layout_marginTop="8dp" android:layout_marginStart="56dp"/>
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+                <Button
+                    android:id="@+id/start_game"
+                    android:layout_width="268dp"
+                    android:layout_height="53dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/splash_btn_grad"
+                    android:fontFamily="cursive"
+                    android:onClick="onClick"
+                    android:text="Почати"
+                    android:textSize="24sp"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.907" />
+            </android.support.constraint.ConstraintLayout>
 
-</RelativeLayout>
+        </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
