--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
         android:id="@+id/Relativy_main"
-        android:layout_width="360dp"
+        android:layout_width="624dp"
         android:layout_height="640dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -22,23 +22,27 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <pl.droidsonroids.gif.GifImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/gifImageView"
+                android:layout_width="367dp"
+                android:layout_height="270dp"
+                android:layout_marginTop="150dp"
+                android:layout_marginBottom="236dp"
                 android:background="@color/colorPrimary"
                 android:src="@drawable/welcome"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/main_text"
                 android:layout_width="88dp"
-                android:layout_height="26dp"
-                android:layout_marginBottom="98dp"
+                android:layout_height="24dp"
+                android:layout_marginBottom="63dp"
                 android:onClick="onClick"
                 android:text="Next"
                 android:textAlignment="center"
@@ -46,8 +50,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintTop_toBottomOf="@+id/gifImageView"
+                app:layout_constraintVertical_bias="0.08" />
 
         </android.support.constraint.ConstraintLayout>
 
