--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -3,10 +3,8 @@
     <android.support.constraint.ConstraintLayout tools:context=".GameActivity"
     android:text="@string/game" android:layout_height="match_parent"
     android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
-
-
-    -
+    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal">
 
         <RelativeLayout
             android:id="@+id/relative_lay_game"
@@ -22,7 +20,7 @@
             app:layout_constraintVertical_bias="1.0">
 
 
-            -
+
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -30,13 +28,14 @@
 
                 <Button
                     android:id="@+id/start_game"
-                    android:layout_width="268dp"
-                    android:layout_height="53dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="72dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="72dp"
+                    android:layout_marginBottom="32dp"
                     android:background="@drawable/splash_btn_grad"
+                    android:enabled="false"
                     android:fontFamily="cursive"
                     android:onClick="onClick"
                     android:text="Почати"
@@ -44,9 +43,90 @@
                     android:textStyle="italic"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.907" />
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Button
+                    android:id="@+id/start_game2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="72dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="72dp"
+                    android:layout_marginBottom="32dp"
+                    android:background="@drawable/splash_btn_grad"
+                    android:enabled="false"
+                    android:fontFamily="cursive"
+                    android:onClick="onClick"
+                    android:text="чиби"
+                    android:textSize="24sp"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.117"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="178dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/complexity_view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/rocket_view" />
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="178dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="56dp"
+                    app:layout_constraintBottom_toTopOf="@+id/start_game"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/complexity_view" />
+
+                <TextView
+                    android:id="@+id/complexity_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="92dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginEnd="170dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Виберіть складність"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toTopOf="@+id/spinner2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.76"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
+                <TextView
+                    android:id="@+id/rocket_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="91dp"
+                    android:layout_marginTop="54dp"
+                    android:layout_marginEnd="211dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Виберіть тип ракети"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toTopOf="@+id/spinner"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
         </RelativeLayout>
