--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HelpActivity">
+    tools:context=".HelpActivity"
+    android:orientation="horizontal">
 
     <RelativeLayout
         android:id="@+id/relativeLayout_help"
@@ -28,7 +29,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="17dp"
-                android:layout_marginTop="108dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginEnd="172dp"
                 android:fontFamily="casual"
                 android:text="@string/text_helps"
@@ -36,7 +37,7 @@
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.067"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,11 +61,11 @@
             <Button
                 android:id="@+id/menu_help"
                 android:layout_width="195dp"
-                android:layout_height="59dp"
+                android:layout_height="60dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="52dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="63dp"
                 android:background="@drawable/splash_btn_grad"
@@ -73,9 +74,9 @@
                 android:textAlignment="center"
                 android:textSize="18sp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toTopOf="@+id/guideline2"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="1.0" />
