--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingActivity"
-    android:text="@string/settings">
+    android:text="@string/settings"
+    android:orientation="horizontal">
 
     <RelativeLayout
         android:id="@+id/relative_lay_setting"
@@ -37,10 +38,9 @@
                 android:inputType="textPostalAddress"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.29" />
+                app:layout_constraintVertical_bias="0.409" />
 
             <Spinner
                 android:id="@+id/size_spinner"
@@ -73,8 +73,10 @@
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText" />
+                app:layout_constraintTop_toBottomOf="@+id/editText"
+                app:layout_constraintVertical_bias="0.782" />
 
             <TextView
                 android:id="@+id/textView2_setting"
@@ -88,10 +90,10 @@
                 android:textSize="30sp"
                 app:layout_constraintBottom_toTopOf="@+id/size_spinner"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.15" />
+                app:layout_constraintVertical_bias="0.888" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guideline"
