--- a/app/src/main/res/layout/game_first_exr.xml
+++ b/app/src/main/res/layout/game_first_exr.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:text="@string/gamefirstexr"
     tools:context=".GameFirstExrActivity"
+    android:screenOrientation="portrait"
     >
 
 
@@ -62,44 +63,13 @@
                         android:orientation="horizontal"
                         app:layout_constraintGuide_begin="639dp" />
 
-                    <Button
-                        android:id="@+id/right"
-                        android:layout_width="200dp"
-                        android:layout_height="47dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="32dp"
-                        android:text="Вправо"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/left"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.163" />
-
-                    <Button
-                        android:id="@+id/left"
-                        android:layout_width="200dp"
-                        android:layout_height="47dp"
-                        android:layout_marginTop="16dp"
-
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="32dp"
-                        android:text="Вліво"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/right"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.164" />
-
                     <TextView
                         android:id="@+id/text_score"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="2dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="120dp"
+                        android:layout_marginBottom="67dp"
                         android:text="досвід-0"
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimary"
@@ -108,15 +78,15 @@
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.785"
+                        app:layout_constraintHorizontal_bias="0.97"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintVertical_bias="0.645" />
 
                     <Button
                         android:id="@+id/attack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="49dp"
+                        android:layout_width="118dp"
+                        android:layout_height="63dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
@@ -126,24 +96,24 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintVertical_bias="0.231" />
 
                     <Button
                         android:id="@+id/toGameActivity"
                         android:layout_width="wrap_content"
                         android:layout_height="31dp"
                         android:layout_marginStart="40dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="1dp"
+                        android:layout_marginBottom="93dp"
                         android:onClick="onClick"
                         android:text="назад"
                         android:textSize="8sp"
-                        app:layout_constraintBottom_toTopOf="@+id/left"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/attack"
-                        app:layout_constraintHorizontal_bias="0.06"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </android.support.constraint.ConstraintLayout>
             </RelativeLayout>
