--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -27,6 +27,27 @@
                 android:layout_height="match_parent">
 
                 <Button
+                    android:id="@+id/start_game3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="72dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="72dp"
+                    android:layout_marginBottom="32dp"
+                    android:background="@drawable/splash_btn_grad"
+                    android:fontFamily="cursive"
+                    android:onClick="onClick"
+                    android:text="FlipBird"
+                    android:textSize="24sp"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.527"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Button
                     android:id="@+id/start_game"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,6 +147,7 @@
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
             </android.support.constraint.ConstraintLayout>
 
         </RelativeLayout>
